# bluefin

./: House Database.ipynb  House Listing API.ipynb  README.md  Scrapy for Redfin.ipynb  Webscraper Component.ipynb  pyproject.toml
.ipynb_checkpoints/: House Database-checkpoint.ipynb  House Listing API-checkpoint.ipynb
src/: homes.py  house.py  main.py  scraper.py  utils.py
src/blue_fin.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_homes.py  test_house.py  test_utils.py
